<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayColorLight"
    android:clipChildren="false"
    android:orientation="vertical">

    <include
        android:id="@+id/actionBarSettings"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        layout="@layout/custom_action_bar" />

    <TextView
        android:id="@+id/availableKeys_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/available_keys"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/blackColor"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/keys_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/grayColor"
        android:text="@string/text_keys"
        android:textSize="14dp" />

    <ListView
        android:id="@+id/keyHandleListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/empty_keyList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/noKeys" />

</LinearLayout>