<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    tools:context=".keyInfoFragment"
    android:weightSum="1"
    android:background="#ffffff">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:id="@+id/close_button"
            android:background="@drawable/rounded_button_black"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp" />

        <!--<Space-->
            <!--android:layout_width="181dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:minWidth="16dp"-->
            <!--android:layout_column="1" />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_delete"
            android:textColor="@color/redColor"
            android:id="@+id/delete_button"
            android:background="@drawable/rounded_button_red"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/info"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:layout_weight="1">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#e1dddd"
        android:id="@+id/info_tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/table_cell_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_user_name"
                android:id="@+id/keyHandle_user_name_label"
                android:enabled="true"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/keyHandle_user_name_label_value"
                android:layout_column="2"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/table_cell_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_created"
                android:id="@+id/keyHandle_created"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/keyHandle_created_value"
                android:layout_column="2"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/table_cell_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_application"
                android:id="@+id/keyHandle_application_label"
                android:textColor="@color/colorPrimaryDark" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="16dp"
                android:layout_column="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/keyHandle_application_value"
                android:layout_column="2"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/table_cell_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_issuer"
                android:id="@+id/keyHandle_issuer_label"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/keyHandle_issuer_value"
                android:layout_column="2"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/table_cell_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_authentication_method"
                android:id="@+id/keyHandle_authentication_method_label"
                android:enabled="true"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/keyHandle_authentication_method_value"
                android:layout_column="2"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/table_cell_text"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_authentication_type"
                android:id="@+id/keyHandle_authentication_type_label"
                android:enabled="true"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/keyHandle_authentication_type_value"
                android:layout_column="2"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/table_cell_text"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keyHandle"
                android:id="@+id/keyHandle_label"
                android:enabled="true"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/keyHandle_id"
                android:layout_column="2"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

    </TableLayout>

    </ScrollView>

</LinearLayout>